Edit the file that says do not edit

--- a/clusters/kind/flux-system/gotk-sync.yaml
+++ b/clusters/kind/flux-system/gotk-sync.yaml
@@ -6,12 +6,10 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 5m0s
   ref:
     branch: main
-  secretRef:
-    name: flux-system
-  url: ssh://git@github.com/kollie-org/example-repo
+  url: https://github.com/kollie-org/example-repo.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
