--- a/clusters/kind/flux-system/kustomization.yaml
+++ b/clusters/kind/flux-system/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
-- /ingress-nginx
-- /podinfo/base
+- ../../../ingress-nginx
+- ../../../podinfo/base
