--- a/podinfo/base/ocirepository.yaml
+++ b/podinfo/base/ocirepository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: podinfo
 spec:
   interval: 12h
   layerSelector:
